# uni_rob

./: .gitignore  .gitmodules  README.md
ros2_ws/src/basic_icp/: CMakeLists.txt  package.xml
ros2_ws/src/basic_icp/src/: BasicICP.cpp
ros2_ws/src/encoder_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/encoder_msgs/msg/: EncoderTicks.msg
ros2_ws/src/fake_encoder/: CMakeLists.txt  package.xml
ros2_ws/src/fake_encoder/launch/: fake_encoder.launch.py
ros2_ws/src/fake_encoder/src/: FakeEncoder.cpp
ros2_ws/src/fake_encoder/urdf/: volksbot.urdf.xacro
ros2_ws/src/trajectory_recorder/src/: recorder.cpp  recorder_right.cpp  recorder_w3.cpp
ros2_ws/src/tut_bot_description/: CMakeLists.txt  package.xml
ros2_ws/src/uos-tools/uos_diffdrive_teleop/: CMakeLists.txt  package.xml
ros2_ws/src/uos-tools/uos_diffdrive_teleop/include/: uos_diffdrive_teleop.h  uos_diffdrive_teleop_key.h
ros2_ws/src/uos-tools/uos_diffdrive_teleop/src/: uos_diffdrive_teleop.cpp  uos_diffdrive_teleop_key.cpp
w1/: uebung1.txt
w1/ros2_ws/src/tut_bot_description/launch/: display.launch.py
w1/ros2_ws/src/tut_bot_description/urdf/: tut-bot.urdf
w1/uebung1/: uebung1.txt
w2/A/2.2/: README.md
w2/A/2.3/: solution.md
w2/B/2.1/: solution.md
w2/B/2.2/: solution.md
w2/B/2.2/trajectory_recorder/install/: local_setup.sh  setup.sh
w2/B/2.2/trajectory_recorder/install/trajectory_recorder/share/trajectory_recorder/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
w2/B/2.2/trajectory_recorder/install/trajectory_recorder/share/trajectory_recorder/cmake/: trajectory_recorderConfig.cmake
w2/B/2.2/trajectory_recorder/log/: latest_build
w3/A/3.1/: solution.md
w3/A/3.1/rosbag2_2026_05_26-19_31_47/: metadata.yaml
w3/A/3.2/: imu.txt  odometry.txt  solution.md
w3/B/3.1/: rvz_config.rviz  solution.md
w3/B/3.1/icp_bag/: icp.db3  metadata.yaml
w3/random_bags/a7/: a7_0.mcap  metadata.yaml  readme.txt
w3/random_bags/lidar_bag/: metadata.yaml
