<package format="3">
  <name>uos_diffdrive_teleop</name>
  <version>1.0.0</version>
  <description>uos_diffdrive_teleop</description>
  <maintainer email="thomas.wiemann@informatik.hs-fulda.de">Thomas Wiemann</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uos_diffdrive_teleop</url>

  <author>Jochen Sprickerhof</author>
  <author email="spuetz@uos.de">Sebastian Pütz</author>
  <author email="thomas.wiemann@informatik.hs-fulda.de">Thomas Wiemann</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
